tests/mut_func_arg_record_dup_field.test
let f = fun ({x=a; x=b}) -> a;
####
SyntaxError: Repeated record pattern field name.
let f = fun ({x=a; x=b}) -> a;
                   ^           
Note: Conflicts with previous definition here:
let f = fun ({x=a; x=b}) -> a;
              ^
